--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(leetcode_cpp)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(leetcode_cpp akuna/Enigma.cpp)
+add_executable(leetcode_cpp akuna/accountValidation.cpp)
